argo-rollout-canary/canary-rollout.yml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: canary-rolling-update
spec:
  replicas: 4
  strategy:
    canary:
      maxSurge: 0           
      maxUnavailable: 1
      steps:
        - setWeight: 25      
        - pause: {}          
        - setWeight: 50     
        - pause: {}          
        - setWeight: 75     
        - pause: {}
        - setWeight: 100     
  selector:
    matchLabels:
      app: canary-rolling-update
  template:
    metadata:
      labels:
        app: canary-rolling-update
    spec:
      containers:
      - name: canary-rolling-update
        image: samraeisi/simple-blue-green-app:v1
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
