argo-rollout-canary/canary-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: canary-rolling-update
spec:
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: canary-rolling-update
