argo-rollout-canary/canary-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rolling-update
spec:
  ingressClassName: nginx
  rules:
  - host: canary.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: canary-rolling-update
            port:
              number: 8080
